@@ -25,3 +25,4 @@ require 'tests/ts_connect.rb'
 require 'tests/ts_execute.rb'
 require 'tests/ts_types.rb'
 require 'tests/ts_transactions.rb'
+require 'tests/ts_environment.rb'
