@@ -2,3 +2,4 @@ require 'tests/tc_connect.rb'
 require 'tests/tc_connect_with_login_only.rb'
 require 'tests/tc_connect_with_login_password.rb'
 require 'tests/tc_dual_connections.rb'
+require 'tests/tc_connect_hash.rb'
